src/tests/Loader/classloader/generics/Instantiation/Negative/Directory.Build.props
<Project>
  <Import Project="$([MSBuild]::GetPathOfFileAbove(Directory.Build.props, $(MSBuildThisFileDirectory)..))" />

  <PropertyGroup>
    <NativeAotIncompatible>true</NativeAotIncompatible>
  </PropertyGroup>
</Project>
